# Bash-tools

./: .gitignore  README.md  pyproject.toml
.claude/worktrees/great-cray-392b3c/: CLAUDE.md
raycast/: audio-to-srt.sh  video-to-edl.sh
tools/: __init__.py  main.py
tools/media/: __init__.py  audio_to_srt.py  srt_to_md.py  video_to_edl.py
tools/shared/: __init__.py  ffmpeg.py  whisper.py
